--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,11 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.9.0
+version: 0.9.1
 
 environment:
   sdk: ">=3.5.0 <4.0.0"
+  flutter: 3.24.5
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,13 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  geolocator: ^13.0.2
   logger: ^2.5.0
   intl: ^0.19.0
   equatable: ^2.0.7
-  permission_handler: ^11.3.1
+  permission_handler: ^11.4.0
   package_info_plus: ^8.2.1
-  # workmanager: ^0.5.2
   flutter_background_geolocation: ^4.16.3
   background_fetch: ^1.3.7
   common_utils: ^2.1.0
